Version 0.6
===========

* New feature: Movie folder organizer
* Series title disambiguation now has a "none of the listed" option
* Verbose output is printed in blue for easier distinguishment
* Overwriting of files in the library ignores the file extension
* Verbose output prints more detailed information
* Single line output is truncated to terminal width

Version 0.5
===========

* Deleting files from put.io is now a config item option rather than a command line option
* Partially transferred files are stored in a hidden folder
* Partially transferred file downloads are resumed
* Expected and actual downloaded file sizes are compared after download
* Bugfix: Displaying wrong remaining time while a download is initiating
* Bugfix: Recursive download of folders with same name on the same level didn't work properly
* Colored console output (working with windows and UNIX terminals)

Version 0.4
===========

* Implemented TV shows organizer extension (beta!)

Version 0.3
===========

* Recursive download of subdirectories from put.io is now possible
* Download chunk size increased, results in lower CPU load during downloads
* File size of local files are compared with the size from put.io and redownloaded if the sizes don't match
* Added support for extension scripts that can perform file organization and cleanup tasks
* Added perl module install script
* Added many command line options for fine control

Version 0.2
===========

* Files are only deleted from put.io if the download completed successfully
* Sync items are skipped when the local target folder is not existing

Version 0.1
===========

* Hello world